refactor: replace .collect(Collectors.toList()) with .toList() (#3189)
* refactor: replace .collect(Collectors.toList()) with .toList()

Motivation:
Java 16+ Stream.toList() provides a concise way to collect stream
elements into an unmodifiable list.

Modification:
Replace .collect(Collectors.toList()) with .toList() across 39 files.
Remove unused Collectors imports.

Result:
Cleaner stream collection code using Java 17 API.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization

* refactor: replace remaining .collect(Collectors.toList()) with .toList() in AggregatorTest

Motivation:
Follow-up to complete Stream.toList() migration.

Modification:
Replace .collect(Collectors.toList()) with .toList() in AggregatorTest.
Remove unused Collectors import.

Result:
Complete migration of JDK Stream collect patterns.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization

* chore: remove accidentally committed .qoder worktree references

Remove .qoder/worktrees/* submodule references that were accidentally
included in a previous commit.

* javafmt

---------

Co-authored-by: PJ Fanning <pjfanning@users.noreply.github.com>